# eaas-e2e-ma-mock-cmd-demo

./: .connect-deployment.yml  .gitignore  .overview.md  CHANGELOG.md  Dockerfile  HOWTO.md  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: test.yml
__mocks__/: fileMock.js  styleMock.js
e2e/: events.py  extension.json  schemas.py  webapp.py
e2e/static/: index.57af9b043733ec2957fb.js  index.730b7494aa6c48fc9409.js  index.d15b323981abcdb44ce2.js  index.html  line.8a386170b00048049994.js  line.fefe76fade9a5141f1bd.js  line.html  page1.html  page2.html  settings.315cb014a38fe649b386.js  settings.53eee63627c6fd0d032c.js  settings.c44186c71501e346dfdd.js  settings.html  tab1.e0e868b15a4f39fc4cb5.js  tab1.html  tab2.7ca982e4128cb9f5309a.js  tab2.html  vendors.c744cf34f58b21017aaa.js  vendors.d117ce711642bade4fe3.js
e2e/static_root/: admin.html  customer.html  index.html  settings.html
tests/: __init__.py  conftest.py  test_webapp.py
ui/pages/: index.html  settings.html  tab1.html  tab2.html
ui/src/: components.js  pages.js  utils.js
ui/src/pages/: index.js  line.js  settings.js  tab1.js
ui/styles/: index.css
ui/tests/: components.spec.js  pages.spec.js  utils.spec.js
